[package]
name = "rolling-file-opt"
version = "1.0.2"
authors = ["William WANG <me@lipengwang.com>"]
edition = "2021"

description = "A rolling file appender with customizable rolling conditions."
homepage = "https://github.com/WANG-lp/rolling-file-rs"
documentation = "https://docs.rs/rolling-file/"
repository = "https://github.com/WANG-lp/rolling-file-rs"
keywords = ["rolling", "logging", "tracing"]
categories = ["debugging"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dev-dependencies]
tempfile = "3.10"

[dependencies]
chrono = "0.4"
tracing = "0.1"
symlink = "0.1.0"
