[package]
name = "local-rolling-file"
version = "1.1.0"
authors = ["William WANG <me@lipengwang.com>"]
edition = "2021"

description = "A rolling file appender with customizable rolling conditions."
homepage = "https://github.com/WANG-lp/local-rolling-file"
documentation = "https://docs.rs/local-rolling-file/"
repository = "https://github.com/WANG-lp/local-rolling-file"
keywords = ["rolling", "logging", "tracing"]
categories = ["debugging"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dev-dependencies]
tempfile = "3.10"

[dependencies]
chrono = "0.4"
tracing = "0.1"
symlink = "0.1.0"
